[教宝云-安卓] 如果是家长身份，点击作业，会闪一下 我发布的作业与学生作业切换的按钮与右上角按钮

--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -43,8 +43,8 @@
 		<div class="mui-content">
 		<!--	<div id="slider" class="mui-slider mui-fullscreen">-->
 				<!--班级选择状态条-->
-				<div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<div id="scroll-class" class="mui-scroll tabs-classes">
+				<div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted display-none">
+					<div id="scroll-class" class="mui-scroll tabs-classes" >
 
 					</div>
 				</div>
