--- a/JiaoBaoYun-hb/html/quan/classSpace-persons.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-persons.html
@@ -16,8 +16,15 @@
 			}
 			
 			.person-cell {
+				display: -webkit-box;
+				display: -webkit-flex;
+				display: -moz-box;
+				display: -ms-flexbox;
 				display: flex;
-				display: -webkit-inline-flex;
+				-webkit-box-align: center;
+				-moz-box-align: center;
+				-ms-flex-align: center;
+				-webkit-align-items: center;
 				align-items: center;
 			}
 			
