--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -61,6 +61,7 @@
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
+		<script src="../../js/utils/video.js"></script>
 		<!--url跳转-->
 		<script src="../../js/utils/urlBrief.js"></script>
 		<!--班级空间js-->
