--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -150,6 +150,7 @@
 		<script src="../../js/utils/events.js"></script>
 		<!--订购会员-->
 		<script src="../../js/cloud/order-member.js"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 
 </html>
