--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -17,6 +17,7 @@
 
 		<script type="text/javascript">
 			var indexReady = false;
+			var loginFlag = 0;//0没登录，1已登录
 			mui.init({
 				statusBarBackground: '#13b7f6'
 			});
@@ -39,18 +40,29 @@
 						mui.toast("网络异常，请检查网络设置！");
 					} else {
 						console.log('网络连接拉！！！！');
-						events.defaultLogin(function(data) {
-							console.log("自动登录获取的值：" + JSON.stringify(data));
-							if(personal && personal.utid != 0) { //有账号，正常登录
-								if(data.flag != loginRoleType) {
+						//判断上次有没有登录，如果登录，就不执行登录协议
+						if (loginFlag == 0) {
+							loginFlag = 1;
+							events.defaultLogin(function(data) {
+							if(data.value == 1) {
+								events.preload('index.html');
+								events.showWaiting();
+								showIndex();
+							} else if(data.value == -1) { //登录失败,用游客登录
+								defalutPerson();
+								events.defaultLogin(function(data) {
+									if(data.value == 1) {
+										events.preload('index.html');
+										setTimeout(function() {
+											events.openNewWindow('index.html');
+										}, 2000);
+									} else if(data.value == -1) { //登录失败
 
-								}
-							} else {
-								if(data.value) {
-
-								}
+									}
+								});
 							}
 						});
+						}
 					}
 				}
 				//安卓的连续点击两次退出程序
@@ -68,34 +80,47 @@
 					}, 1000);
 					return false;
 				};
+				//判断是否需要更新
+				setTimeout(appUpdate.updateApp, 5000);
 				//默认自动登录
+				login();
+			});
+
+			//登录
+			function login() {
 				events.defaultLogin(function(data) {
+					if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
+						console.log('没有网络！！！！');
+						mui.toast("网络异常，请检查网络设置！");
+						return;
+					}
 					console.log("自动登录获取的值1111：" + JSON.stringify(data));
 					if(data.value == 1) {
+						loginFlag = 1;
 						events.preload('index.html');
 						events.showWaiting();
 						showIndex();
-						//						setTimeout(function() {
-						//							events.openNewWindow('index.html');
-						//						}, 2000);
-						//判断是否需要更新
-						setTimeout(appUpdate.updateApp, 5000);
-					} else if(data.value == -1) { //登录失败,用游客登录
+					} else if(data.value == 0) { //登录失败,用游客登录
 						defalutPerson();
 						events.defaultLogin(function(data) {
 							if(data.value == 1) {
+								loginFlag = 1;
 								events.preload('index.html');
 								setTimeout(function() {
 									events.openNewWindow('index.html');
 								}, 2000);
-							} else if(data.value == -1) { //登录失败
-
+							} else if(data.value == 0) { //登录失败
+								var btn = ["确定"];
+								mui.confirm('可能网络出现问题，请检查网络后重试', '', btn, function(e) {
+									if(e.index == 0) {
+										login();
+									} 
+								});
 							}
 						});
 					}
-					//android更新app
 				});
-			});
+			}
 
 			function showIndex() {
 				if(indexReady) {
