--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -285,6 +285,10 @@
 			.mui-pull-top-canvas canvas {
 				width: 40px;
 			}
+			
+			.mui-content.mui-fullscreen {
+				top: 45px;
+			}
 		</style>
 	</head>
 
@@ -304,36 +308,38 @@
 			</div>
 		</nav>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-fullscreen mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--数据列表-->
-				<ul class="mui-table-view">
-					<li id="question" class="mui-table-view-cell mui-media">
-						<div class="mui-media-body">
-							<h4 id="question_title"></h4>
-							<div id="question_images"></div>
-							<div id="question_content" class="ellipsis-show">
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<!--数据列表-->
+					<ul class="mui-table-view">
+						<li id="question" class="mui-table-view-cell mui-media">
+							<div class="mui-media-body">
+								<h4 id="question_title"></h4>
+								<div id="question_images"></div>
+								<div id="question_content" class="ellipsis-show">
+								</div>
+								<div id="showAll">显示全部</div>
 							</div>
-							<div id="showAll">显示全部</div>
+							<div class="mui-media-body">
+								<span id="liulanshu" class="mui-icon iconfont icon-liulan"></span>
+								<span id="guanzhushu" class="mui-icon iconfont icon-31guanzhu1xuanzhong"></span>
+								<button id="guanzhu" type="button" class="mui-btn mui-btn-blue mui-pull-right" style="width: 55px;border: 0;padding: 0;">关注</button>
+							</div>
+						</li>
+						<div id="answer" style="background-color:#efeff4;">
+							<div id="answer_top" style="height: 40px;color: #9D9D9D;">
+								<div id="answershu" class="mui-pull-left" style="line-height: 40px;margin-left: 15px;"></div>
+								<a href="#popover" class="mui-pull-right" style="color: #9D9D9D;line-height: 40px;margin-right: 15px;">
+									<div id="ordertype" class="mui-pull-left">按质量排序</div>
+									<span class="mui-icon mui-icon-arrowdown" style="font-size: 16px;margin-left: 3px;"></span>
+								</a>
+							</div>
+							<div id="answer_bottom">
+							</div>
 						</div>
-						<div class="mui-media-body">
-							<span id="liulanshu" class="mui-icon iconfont icon-liulan"></span>
-							<span id="guanzhushu" class="mui-icon iconfont icon-31guanzhu1xuanzhong"></span>
-							<button id="guanzhu" type="button" class="mui-btn mui-btn-blue mui-pull-right" style="width: 55px;border: 0;padding: 0;">关注</button>
-						</div>
-					</li>
-					<div id="answer" style="background-color:#efeff4;">
-						<div id="answer_top" style="height: 40px;color: #9D9D9D;">
-							<div id="answershu" class="mui-pull-left" style="line-height: 40px;margin-left: 15px;"></div>
-							<a href="#popover" class="mui-pull-right" style="color: #9D9D9D;line-height: 40px;margin-right: 15px;">
-								<div id="ordertype" class="mui-pull-left">按质量排序</div>
-								<span class="mui-icon mui-icon-arrowdown" style="font-size: 16px;margin-left: 3px;"></span>
-							</a>
-						</div>
-						<div id="answer_bottom">
-						</div>
-					</div>
-				</ul>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div id="popover" class="mui-popover" style="width: 150px;">
