--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -27,27 +27,28 @@
 			<a id="write" class="mui-icon iconfont icon-fabu-copy mui-pull-right"></a>
 			<a id="group" class="mui-icon iconfont icon-renren  mui-pull-right"></a>
 		</header>
-			<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--数据列表-->
-				<ul id="classSpace_list" class="mui-table-view">
-				</ul>
+		<!--下拉刷新容器-->
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<!--数据列表-->
+					<ul id="classSpace_list" class="mui-table-view">
+					</ul>
+				</div>
 			</div>
-
 		</div>
 		<!--点赞图标点击后的弹出框-->
 		<div id="popover" class="mui-popover">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
 					<a id="zan" class="" href="#">
-						<p class="pop-p"><span id="pop-zan" class="mui-icon iconfont icon-dianzan1 isLike"></span>点赞</p> 
+						<p class="pop-p"><span id="pop-zan" class="mui-icon iconfont icon-dianzan1 isLike"></span>点赞</p>
 					</a>
 				</li>
 				<div class="divider-line"></div>
 				<li class="mui-table-view-cell">
-					<a id="check" class=""  href="#"> 
-						<p  class="pop-p"><span id="pop-look" class="mui-icon iconfont icon-liulan isNotLike"></span>查看</p> 
+					<a id="check" class="" href="#">
+						<p class="pop-p"><span id="pop-look" class="mui-icon iconfont icon-liulan isNotLike"></span>查看</p>
 					</a>
 				</li>
 			</ul>
