求知问题 求知回答 班级空间 更改刷新模块

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -226,6 +226,22 @@
 				width: 50%;
 			}
 			
+			.mui-bar~.mui-content .mui-fullscreen {
+				top: 44px;
+				height: auto;
+			}
+			
+			.mui-pull-top-tips {
+				position: absolute;
+				top: -20px;
+				left: 50%;
+				margin-left: -20px;
+				width: 40px;
+				height: 40px;
+				border-radius: 100%;
+				z-index: 1;
+			}
+			
 			.mui-bar~.mui-pull-top-tips {
 				top: 24px;
 			}
@@ -288,6 +304,7 @@
 			
 			.mui-content.mui-fullscreen {
 				top: 45px;
+				height: auto;
 			}
 		</style>
 	</head>
