0005863: 断网后点击班级空间 界面一直加载中 无法返回

--- a/JiaoBaoYun-hb/html/quan/reply-aboutMe.html
+++ b/JiaoBaoYun-hb/html/quan/reply-aboutMe.html
@@ -90,6 +90,8 @@
 						wd.close();
 						if(data.RspCode == 0) {
 							callback();
+						}else{
+							mui.toast(data.RspTxt);
 						}
 					})
 					break;
@@ -110,6 +112,8 @@
 						wd.close();
 						if(data.RspCode == 0) {
 							callback();
+						}else{
+							mui.toast(data.RspTxt);
 						}
 					})
 					break;
