--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -282,9 +282,10 @@
 			
 			.mui-pull-bottom-tips {
 				text-align: center;
-				background-color: #efeff4;
-				font-size: 15px;
-				line-height: 40px;
+				background-color: transparent;
+				font-size: 0px;
+				line-height: 0px;
+				max-height: 0;
 				color: #777;
 			}
 			
