--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -17,7 +17,7 @@
 
 		<script type="text/javascript">
 			var indexReady = false;
-			var loginFlag = 0;//0没登录，1已登录
+			var loginFlag = 0; //0没登录，1已登录
 			mui.init({
 				statusBarBackground: '#13b7f6'
 			});
@@ -41,27 +41,27 @@
 					} else {
 						console.log('网络连接拉！！！！');
 						//判断上次有没有登录，如果登录，就不执行登录协议
-						if (loginFlag == 0) {
+						if(loginFlag == 0) {
 							loginFlag = 1;
 							events.defaultLogin(function(data) {
-							if(data.value == 1) {
-								events.preload('index.html');
-								events.showWaiting();
-								showIndex();
-							} else if(data.value == -1) { //登录失败,用游客登录
-								defalutPerson();
-								events.defaultLogin(function(data) {
-									if(data.value == 1) {
-										events.preload('index.html');
-										setTimeout(function() {
-											events.openNewWindow('index.html');
-										}, 2000);
-									} else if(data.value == -1) { //登录失败
+								if(data.value == 1) {
+									events.preload('index.html');
+									events.showWaiting();
+									showIndex();
+								} else if(data.value == -1) { //登录失败,用游客登录
+									defalutPerson();
+									events.defaultLogin(function(data) {
+										if(data.value == 1) {
+											events.preload('index.html');
+											setTimeout(function() {
+												events.openNewWindow('index.html');
+											}, 2000);
+										} else if(data.value == -1) { //登录失败
 
-									}
-								});
-							}
-						});
+										}
+									});
+								}
+							});
 						}
 					}
 				}
@@ -91,7 +91,12 @@
 				events.defaultLogin(function(data) {
 					if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
 						console.log('没有网络！！！！');
-						mui.toast("网络异常，请检查网络设置！");
+						var btn = ["确定"];
+						mui.confirm('可能网络出现问题，请检查网络后重试', '', btn, function(e) {
+							if(e.index == 0) {
+								login();
+							}
+						});
 						return;
 					}
 					console.log("自动登录获取的值1111：" + JSON.stringify(data));
@@ -114,7 +119,7 @@
 								mui.confirm('可能网络出现问题，请检查网络后重试', '', btn, function(e) {
 									if(e.index == 0) {
 										login();
-									} 
+									}
 								});
 							}
 						});
