调整字体大小，和修改录音BUG

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -144,7 +144,7 @@
 				 */
 				multiMedia.audioPlayCallBack = function(data) {
 					console.log('audioPlayCallBack ' + JSON.stringify(data));
-					ShowAudioUtil.initAudio(data);
+					ShowAudioUtil.initAudio(data, 1);
 				}
 
 				//初始化视频播放器
