--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -17,7 +17,7 @@
 			<h1 id="title" class="mui-title">关注他的人</h1>
 		</header>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-fullscreen noOneDisplay" style="z-index:0">
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
 					<ul id="list-container" class="mui-table-view">
@@ -25,7 +25,7 @@
 					</ul>
 				</div>
 			</div>
-			<p id="noOne-container" class="" style="position: absolute;width:100%;top: 70%;text-align: center;">暂无人点赞</p>
+			<p id="noOne-container" class="display-none" style="position: absolute;width:100%;top: 70%;text-align: center;">暂无关注的人</p>
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
