求知首页图片预加载

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -40,12 +40,11 @@
 		<script src="../../js/mui.pullToRefresh.material.js"></script>-->
 		<!--公共方法js-->
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/mui.lazyload.js"></script>
-		<script src="../../js/mui.lazyload.img.js"></script>
 		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
 		<!--求知接口js-->
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
+		<script src="../../js/libs/jquery.lazyload.min.js"></script>
 		<!--本页js-->
 		<script src="../../js/qiuzhi/qiuzhi-sub.js"></script>
 	</body>
